k8s/base/fraud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-service
  template:
    metadata:
      labels:
        app: fraud-service
    spec:
      containers:
        - name: fraud-service
          image: banking/fraud:latest
          ports:
            - containerPort: 9093
          readinessProbe:
            tcpSocket:
              port: 9093
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 9093
            initialDelaySeconds: 60
            periodSeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-service
spec:
  clusterIP: None
  selector:
    app: fraud-service
  ports:
    - name: grpc
      port: 9093
      targetPort: 9093
